--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
       </section>
       <footer id="contact-me">
           <h2>Contact me</h2>
-          <p>pablo.de.la.cruz@gmail.com</p>
+          <p>pablo.de.la.cruz.pro@gmail.com</p>
       </footer>
     <script src="src/app.js"></script>
   </body>
